--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -27,18 +30,23 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.2",
     "install": "^0.13.0",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.486.0",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.8.3",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.9.5",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "npm": "^11.2.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
