--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
