--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.6.2",
     "frimousse": "^0.2.0",
     "install": "^0.13.0",
@@ -50,11 +50,12 @@
     "next-themes": "^0.4.6",
     "npm": "^11.2.0",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "resend": "^4.4.1",
     "sanitize-html": "^2.15.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
