--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "next-themes": "^0.4.6",
     "npm": "^11.2.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.6.7",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
@@ -62,6 +62,7 @@
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
