--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.3",
     "resend": "^4.4.1",
     "sanitize-html": "^2.15.0",
     "sonner": "^2.0.3",
@@ -76,5 +77,8 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
